--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         </activity>
 
         <activity android:name=".actIndex" android:exported="true"></activity>
+        <activity android:name=".actchat" android:exported="true"></activity>
+
     </application>
 
 </manifest>
